<resources>
    <string name="app_name">Calculator</string>
    <string name="_0">0</string>
    <string name="ac">AC</string>
    <string name="plus_minus">+/-</string>
    <string name="percent">%</string>
    <string name="divided">/</string>
    <string name="_7">7</string>
    <string name="_8">8</string>
    <string name="_9">9</string>
    <string name="times">x</string>
    <string name="_4">4</string>
    <string name="_5">5</string>
    <string name="_6">6</string>
    <string name="minus">-</string>
    <string name="_1">1</string>
    <string name="_2">2</string>
    <string name="_3">3</string>
    <string name="plus">+</string>
    <string name="zero">0</string>
    <string name="full_stop">.</string>
    <string name="equal">=</string>
    <string name="policies">Policies</string>
    <string name="policy">Policy</string>
    <string name="prd_ctgr">Product Category</string>
    <string name="orgn_cnt">Origin Country</string>
    <string name="brand">Brand</string>
    <string name="current_policies">Current Policies</string>
    <string name="export_as_csv">Export as CSV</string>
    <string name="send">send</string>

</resources>