<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/black"
    tools:context=".MainActivity">

    <FrameLayout
        android:paddingHorizontal="34dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toTopOf="@+id/container"
        android:layout_width="match_parent"
        android:layout_height="0dp">

        <TextView
            android:id="@+id/text_view"
            android:ellipsize="end"
            android:maxLines="1"
            android:layout_gravity="bottom|end"
            android:textColor="@color/white"
            android:textSize="80sp"
            android:text="@string/_0"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>

    </FrameLayout>


    <LinearLayout
        android:id="@+id/container"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <LinearLayout
            android:paddingVertical="6dp"
            android:gravity="center"
            android:paddingHorizontal="18dp"
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <com.google.android.material.button.MaterialButton
                style="@style/Gray.Button"
                android:id="@+id/btn_clear"
                android:onClick="onNumberClick"
                android:text="@string/ac" />

            <com.google.android.material.button.MaterialButton
                style="@style/Gray.Button"
                android:text="@string/plus_minus"
                android:layout_marginHorizontal="18dp" />

            <com.google.android.material.button.MaterialButton
                style="@style/Gray.Button"
                android:text="@string/percent"
                android:layout_marginEnd="18dp" />

            <com.google.android.material.button.MaterialButton
                style="@style/Orange.Button"
                android:onClick="onOperationClick"
                android:id="@+id/btn_divided"
                android:text="@string/divided" />

        </LinearLayout>

        <LinearLayout
            android:paddingVertical="6dp"
            android:gravity="center"
            android:paddingHorizontal="18dp"
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <com.google.android.material.button.MaterialButton
                style="@style/Dark.Gray.Button"
                android:text="@string/_7"
                android:id="@+id/btn_seven"
                android:onClick="onNumberClick"/>

            <com.google.android.material.button.MaterialButton
                style="@style/Dark.Gray.Button"
                android:text="@string/_8"
                android:id="@+id/btn_eight"
                android:onClick="onNumberClick"
                android:layout_marginHorizontal="18dp" />

            <com.google.android.material.button.MaterialButton
                style="@style/Dark.Gray.Button"
                android:text="@string/_9"
                android:id="@+id/btn_nine"
                android:onClick="onNumberClick"
                android:layout_marginEnd="18dp" />

            <com.google.android.material.button.MaterialButton
                style="@style/Orange.Button"
                android:text="@string/times"
                android:id="@+id/btn_times"
                android:onClick="onOperationClick"/>

        </LinearLayout>

        <LinearLayout
            android:paddingVertical="6dp"
            android:gravity="center"
            android:paddingHorizontal="18dp"
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <com.google.android.material.button.MaterialButton
                style="@style/Dark.Gray.Button"
                android:text="@string/_4"
                android:id="@+id/btn_four"
                android:onClick="onNumberClick"/>

            <com.google.android.material.button.MaterialButton
                style="@style/Dark.Gray.Button"
                android:text="@string/_5"
                android:id="@+id/btn_five"
                android:onClick="onNumberClick"
                android:layout_marginHorizontal="18dp" />

            <com.google.android.material.button.MaterialButton
                style="@style/Dark.Gray.Button"
                android:text="@string/_6"
                android:id="@+id/btn_six"
                android:onClick="onNumberClick"
                android:layout_marginEnd="18dp" />

            <com.google.android.material.button.MaterialButton
                style="@style/Orange.Button"
                android:onClick="onOperationClick"
                android:id="@+id/btn_minus"
                android:text="@string/minus" />

        </LinearLayout>

        <LinearLayout
            android:paddingVertical="6dp"
            android:gravity="center"
            android:paddingHorizontal="18dp"
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <com.google.android.material.button.MaterialButton
                style="@style/Dark.Gray.Button"
                android:text="@string/_1"
                android:onClick="onNumberClick"
                android:id="@+id/btn_one"/>

            <com.google.android.material.button.MaterialButton
                style="@style/Dark.Gray.Button"
                android:text="@string/_2"
                android:onClick="onNumberClick"
                android:id="@+id/btn_two"
                android:layout_marginHorizontal="18dp" />

            <com.google.android.material.button.MaterialButton
                style="@style/Dark.Gray.Button"
                android:text="@string/_3"
                android:id="@+id/btn_three"
                android:onClick="onNumberClick"
                android:layout_marginEnd="18dp" />

            <com.google.android.material.button.MaterialButton
                style="@style/Orange.Button"
                android:text="@string/plus"
                android:onClick="onOperationClick"
                android:id="@+id/btn_plus"/>

        </LinearLayout>

        <LinearLayout
            android:paddingVertical="6dp"
            android:gravity="center"
            android:paddingHorizontal="18dp"
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <com.google.android.material.button.MaterialButton
                style="@style/Dark.Gray.Button"
                android:textAlignment="textStart"
                android:paddingStart="30dp"
                android:paddingEnd="0dp"
                android:layout_width="178dp"
                android:text="@string/zero"
                android:id="@+id/btn_zero"
                android:onClick="onNumberClick"/>

            <com.google.android.material.button.MaterialButton
                style="@style/Dark.Gray.Button"
                android:text="@string/full_stop"
                android:onClick="onNumberClick"
                android:id="@+id/btn_full_stop"
                android:layout_marginHorizontal="18dp" />

            <com.google.android.material.button.MaterialButton
                style="@style/Orange.Button"
                android:text="@string/equal"
                android:onClick="onOperationClick"
                android:id="@+id/btn_equal"/>

        </LinearLayout>





    </LinearLayout>




</androidx.constraintlayout.widget.ConstraintLayout>