<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white2"
    tools:context=".SecondActivity">

    <TextView
        android:id="@+id/text"
        android:layout_marginTop="150dp"
        android:textColor="@color/dark_blue"
        android:textStyle="bold"
        android:textSize="30sp"
        android:textAlignment="center"
        android:text="@string/policies"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>

    <com.google.android.material.button.MaterialButton
        android:backgroundTint="@color/white"
        android:id="@+id/btn_1"
        android:layout_marginHorizontal="10dp"
        app:cornerRadius="20dp"
        android:text="@string/policy"
        app:icon="@drawable/ic_baseline"
        app:iconSize="30dp"
        app:iconTint="@color/black"
        app:iconGravity="end"
        android:textAlignment="textStart"
        android:textColor="@color/black"
        android:layout_marginTop="20dp"
        app:layout_constraintTop_toBottomOf="@+id/text"
        android:layout_width="match_parent"
        android:layout_height="70dp"/>

    <com.google.android.material.button.MaterialButton
        android:backgroundTint="@color/white"
        android:id="@+id/btn_2"
        android:layout_marginHorizontal="10dp"
        app:cornerRadius="20dp"
        android:text="@string/prd_ctgr"
        app:icon="@drawable/ic_baseline"
        app:iconSize="30dp"
        app:iconTint="@color/black"
        app:iconGravity="end"
        android:textAlignment="textStart"
        android:textColor="@color/black"
        android:layout_marginTop="-5dp"
        app:layout_constraintTop_toBottomOf="@+id/btn_1"
        android:layout_width="match_parent"
        android:layout_height="70dp"/>

    <com.google.android.material.button.MaterialButton
        android:backgroundTint="@color/white"
        android:id="@+id/btn_3"
        android:layout_marginHorizontal="10dp"
        app:cornerRadius="20dp"
        android:text="@string/orgn_cnt"
        app:icon="@drawable/ic_baseline"
        app:iconSize="30dp"
        app:iconTint="@color/black"
        app:iconGravity="end"
        android:textAlignment="textStart"
        android:textColor="@color/black"
        android:layout_marginTop="-5dp"
        app:layout_constraintTop_toBottomOf="@+id/btn_2"
        android:layout_width="match_parent"
        android:layout_height="70dp"/>

    <com.google.android.material.button.MaterialButton
        android:backgroundTint="@color/white"
        android:id="@+id/btn_4"
        android:layout_marginHorizontal="10dp"
        app:cornerRadius="20dp"
        android:text="@string/brand"
        app:icon="@drawable/ic_baseline"
        app:iconSize="30dp"
        app:iconTint="@color/black"
        app:iconGravity="end"
        android:textAlignment="textStart"
        android:textColor="@color/black"
        android:layout_marginTop="-5dp"
        app:layout_constraintTop_toBottomOf="@+id/btn_3"
        android:layout_width="match_parent"
        android:layout_height="70dp"/>

    <TextView
        android:id="@+id/text2"
        android:textColor="@color/dark_blue"
        android:textStyle="bold"
        android:textSize="30sp"
        android:textAlignment="center"
        android:text="@string/current_policies"
        android:layout_marginTop="50dp"
        app:layout_constraintTop_toBottomOf="@+id/btn_4"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/btn_kill"
        android:layout_marginTop="15dp"
        android:backgroundTint="@color/red"
        android:text="@string/export_as_csv"
        app:cornerRadius="25dp"
        android:layout_width="220dp"
        android:layout_height="70dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/text2" />







</androidx.constraintlayout.widget.ConstraintLayout>